--- a/Week3-M2/Ejercicio2/blog.html
+++ b/Week3-M2/Ejercicio2/blog.html
@@ -3,16 +3,21 @@
         <main class="written">
             <h1 class="mainheader">El Poder de la Disciplina Personal.</h1>
             <h2 class="subtitle">Lecciones de Robin Sharma para una vida extraordinaria</h2>
+            <h3 class="date">By Rudy Villalobos - Noviembre 2, 2025</h3>
             <figure class="photo">
-                <img src="https://media.gq-magazine.co.uk/photos/67d949c7e0aa88eba4f9274e/16:9/w_1920,c_limit/1703-Robin-Sharma.jpg" width="600" height="400"/>
+                <img src="https://akm-img-a-in.tosshub.com/lingo/hrb/images/story/202212/untitled-design-2022-12-19t133951683191222014007.png" width="800" height="500"/>
             </figure>
             <div>
+                <p class= "photo_description">-En la foto Robin Sharma, escribiendo uno de sus famosos libros a nivel Mundial. </p>
                 <p class="paragraph">
                     La disciplina personal, según Robin Sharma, es el cimiento sobre el cual se construye una vida plena,
                     significativa y exitosa. No se trata únicamente de seguir horarios estrictos o alcanzar metas ambiciosas, sino
                     de desarrollar una fuerza interior que permita actuar con determinación incluso cuando las circunstancias
                     son adversas. Sharma sostiene que la verdadera libertad nace de la autodisciplina, ya que solo quien domina
-                    su mente y sus acciones puede dirigir su destino con claridad y propósito. Cada día ofrece la posibilidad de
+                    su mente y sus acciones puede dirigir su destino con claridad y propósito.
+                    </p>
+                <p class="paragraph">
+                    Cada día ofrece la posibilidad de
                     fortalecer el carácter, perfeccionar los hábitos y avanzar un paso más hacia la excelencia personal. Para él, el
                     éxito no es un accidente, sino el resultado de pequeñas decisiones tomadas con coherencia y constancia.
                     Despertar temprano, cuidar el cuerpo y el espíritu, leer, meditar y servir a los demás son prácticas que, al
