--- a/Week3-M2/Ejercicio3/billboard.html
+++ b/Week3-M2/Ejercicio3/billboard.html
@@ -26,117 +26,117 @@
                         <p class="artist_name">Taylor Swift</p>
                         <input class="one_submit" type="submit" value="+" />
                     </div>
-                    <div class="background_award_star">
+                    <div class="background_award_star_and_peak_first_on_list">
                         <p class="award_star">★</p>
                     </div>
-                    <div class="background_last_week">
-                        <p class="last_week_num">1</p>
+                    <div class="background_last_week_and_wks_num_first_on_list">
+                        <p class="last_week_peak_and_wks_num">1</p>
                     </div> 
-                    <div claas="background_peak">
-                        <p class="peak_num">1</p>
+                    <div claas="background_award_star_and_peak_first_on_list">
+                        <p class="last_week_peak_and_wks_num">1</p>
                     </div>
-                    <div class="background_wks_num">
-                        <p class="wks_num">3</p>
+                    <div class="background_last_week_and_wks_num_first_on_list">
+                        <p class="last_week_peak_and_wks_num">3</p>
                     </div>
                 </div>
-                <div class="second_rank">
-                    <div class="background_2">
-                        <p class="number_2">2</p>
+                <div class="card_rank_list">
+                    <div class="background_number_rank">
+                        <p class="number_rank_settings">2</p>
                     </div>
-                    <figure class="artist_photo2">
+                    <figure class="artist_photo_album">
                         <img src="https://cdn-images.dzcdn.net/images/cover/aafe40638c2d32307da373f60eb9e5c1/500x500-000000-80-0-0.jpg"width="175" height="175"/>
                     </figure>
-                    <div class="artist_banner2">
-                        <p class="song_name2">Golden</p>
-                        <p class="artist_name2">HUNTR/X: EJAE, Audrey Nuna & REI AMI</p>
-                        <input class="two_submit" type="submit" value="+" />
+                    <div class="artist_banner_rank">
+                        <p class="song_name_rank">Golden</p>
+                        <p class="artist_name_rank">HUNTR/X: EJAE, Audrey Nuna & REI AMI</p>
+                        <input class="submit" type="submit" value="+" />
                     </div>
-                    <div class="background_award_star2">
-                        <p class="award_star2">★</p>
+                    <div class="background_award_star_and_peak_rank">
+                        <p class="award_star_rank">★</p>
                     </div>
-                    <div class="background_last_week2">
-                        <p class="last_week_num2">2</p>
+                    <div class="background_last_week_and_wks_num_rank">
+                        <p class="last_week_num_rank">2</p>
                     </div> 
-                    <div class="background_peak2">
-                        <p class="peak_num2">1</p>
+                    <div class="background_award_star_and_peak_rank">
+                        <p class="peak_num_rank">1</p>
                     </div>
-                    <div class="background_wks_num2">
-                        <p class="wks_num2">19</p>
+                    <div class="background_last_week_and_wks_num_rank">
+                        <p class="wks_num_rank">19</p>
                     </div>
                 </div>
-                <div class="third_rank">
-                    <div class="background_3">
-                        <p class="number_3">3</p>
+                <div class="card_rank_list">
+                    <div class="background_number_rank">
+                        <p class="number_rank_settings">3</p>
                     </div>
-                    <figure class="artist_photo3">
+                    <figure class="artist_photo_album">
                         <img src="https://cdn-images.dzcdn.net/images/cover/f4246416b5e3e71a35adf1e2cbe98bfb/500x500-000000-80-0-0.jpg"width="175" height="175"/>
                     </figure>
-                    <div class="artist_banner3">
-                        <p class="song_name3">Ordinary</p>
-                        <p class="artist_name3">Alex Warren</p>
-                        <input class="third_submit" type="submit" value="+" />
+                    <div class="artist_banner_rank">
+                        <p class="song_name_rank">Ordinary</p>
+                        <p class="artist_name_rank">Alex Warren</p>
+                        <input class="submit" type="submit" value="+" />
                     </div>
-                    <div class="background_award_star3">
-                        <p class="award_star3"></p>
+                    <div class="background_award_star_and_peak_rank">
+                        <p class="award_star_rank"></p>
                     </div>
-                    <div class="background_last_week3">
-                        <p class="last_week_num3">3</p>
+                    <div class="background_last_week_and_wks_num_rank">
+                        <p class="last_week_num_rank">3</p>
                     </div> 
-                    <div class="background_peak3">
-                        <p class="peak_num3">1</p>
+                    <div class="background_award_star_and_peak_rank">
+                        <p class="peak_num_rank">1</p>
                     </div>
-                    <div class="background_wks_num2">
-                        <p class="wks_num3">38</p>
+                    <div class="background_last_week_and_wks_num_rank">
+                        <p class="wks_num_rank">38</p>
                     </div>
                 </div>
-                <div class="fourth_rank">
-                    <div class="background_4">
-                        <p class="number_4">4</p>
+                <div class="card_rank_list">
+                    <div class="background_number_rank">
+                        <p class="number_rank_settings">4</p>
                     </div>
-                    <figure class="artist_photo4">
+                    <figure class="artist_photo_album">
                         <img src="https://www.lahiguera.net/musicalia/artistas/taylor_swift/disco/13043/taylor_swift_1989_taylors_version-portada.jpg"width="175" height="175"/>
                     </figure>
-                    <div class="artist_banner4">
-                        <p class="song_name4">Opalite</p>
-                        <p class="artist_name4">Taylor Swift</p>
-                        <input class="fourth_submit" type="submit" value="+" />
+                    <div class="artist_banner_rank">
+                        <p class="song_name_rank">Opalite</p>
+                        <p class="artist_name_rank">Taylor Swift</p>
+                        <input class="submit" type="submit" value="+" />
                     </div>
-                    <div class="background_award_star4">
-                        <p class="award_star4"></p>
+                    <div class="background_award_star_and_peak_rank">
+                        <p class="award_star_rank"></p>
                     </div>
-                    <div class="background_last_week4">
-                        <p class="last_week_num4">4</p>
+                    <div class="background_last_week_and_wks_num_rank">
+                        <p class="last_week_num_rank">4</p>
                     </div> 
-                    <div class="background_peak4">
-                        <p class="peak_num4">2</p>
+                    <div class="background_award_star_and_peak_rank">
+                        <p class="peak_num_rank">2</p>
                     </div>
-                    <div class="background_wks_num4">
-                        <p class="wks_num4">4</p>
+                    <div class="background_last_week_and_wks_num_rank">
+                        <p class="wks_num_rank">4</p>
                     </div>
                 </div>
-                <div class="fifth_rank">
-                    <div class="background_5">
-                        <p class="number_5">5</p>
+                <div class="card_rank_list">
+                    <div class="background_number_rank">
+                        <p class="number_rank_settings">5</p>
                     </div>
-                    <figure class="artist_photo5">
+                    <figure class="artist_photo_album">
                         <img src="https://cdn-images.dzcdn.net/images/cover/73eb46e655061c72096b67f70a8dc609/500x500-000000-80-0-0.jpg"width="175" height="175"/>
                     </figure>
-                    <div class="artist_banner5">
-                        <p class="song_name5">Man I Need</p>
-                        <p class="artist_name5">Olivia Dean</p>
-                        <input class="fifth_submit" type="submit" value="+" />
+                    <div class="artist_banner_rank">
+                        <p class="song_name_rank">Man I Need</p>
+                        <p class="artist_name_rank">Olivia Dean</p>
+                        <input class="submit" type="submit" value="+" />
                     </div>
-                    <div class="background_award_star5">
-                        <p class="award_star5">★</p>
+                    <div class="background_award_star_and_peak_rank">
+                        <p class="award_star_rank">★</p>
                     </div>
-                    <div class="background_last_week5">
-                        <p class="last_week_num5">8</p>
+                    <div class="background_last_week_and_wks_num_rank">
+                        <p class="last_week_num_rank">8</p>
                     </div> 
-                    <div class="background_peak5">
-                        <p class="peak_num5">5</p>
+                    <div class="background_award_star_and_peak_rank">
+                        <p class="peak_num_rank">5</p>
                     </div>
-                    <div class="background_wks_num5">
-                        <p class="wks_num5">10</p>
+                    <div class="background_last_week_and_wks_num_rank">
+                        <p class="wks_num_rank">10</p>
                     </div>
                 </div>
             </div>
