--- a/Week3-M2/Ejercicio1/Forms.html
+++ b/Week3-M2/Ejercicio1/Forms.html
@@ -1,7 +1,7 @@
 <html>
         <form action="https://StorageVote.com/test" method="POST">
-            <h1 id="black_text">Submit  your Vote!</h1>
-            <p id="title1">Complete all information*</p>
+            <h1 id="top_first_title">Submit  your Vote!</h1>
+            <p id="sub_second_title">Complete all information*</p>
 
             <label for="first_name"></label>
             <br />
@@ -26,7 +26,7 @@
             <br />
             <br />
 
-            <select id="candidates" name="candidates">
+            <select id="candidates_selector" name="candidates">
                 <option hidden>Choose your Candidate:</option>
                 <option value="Candidate #3">Candidate #3</option>
                 <option value="Candidate #2">Candidate #2</option>
